// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextMate tokenizer > basics > tokenizes all basics fixtures > basics/filter.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 12,
    "start": 11,
    "text": """,
    "token": "string",
  },
  {
    "end": 16,
    "start": 12,
    "text": "post",
    "token": "string",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > basics > tokenizes all basics fixtures > basics/literals.groq 1`] = `
[
  {
    "end": 4,
    "start": 0,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 10,
    "start": 5,
    "text": "false",
    "token": "keyword",
  },
  {
    "end": 15,
    "start": 11,
    "text": "null",
    "token": "keyword",
  },
  {
    "end": 18,
    "start": 16,
    "text": "42",
    "token": "number",
  },
  {
    "end": 23,
    "start": 19,
    "text": "3.14",
    "token": "number",
  },
  {
    "end": 28,
    "start": 24,
    "text": "1e10",
    "token": "number",
  },
  {
    "end": 35,
    "start": 29,
    "text": "2.5E-3",
    "token": "number",
  },
  {
    "end": 37,
    "start": 36,
    "text": """,
    "token": "string",
  },
  {
    "end": 48,
    "start": 37,
    "text": "hello world",
    "token": "string",
  },
  {
    "end": 49,
    "start": 48,
    "text": """,
    "token": "string",
  },
  {
    "end": 51,
    "start": 50,
    "text": "'",
    "token": "string",
  },
  {
    "end": 64,
    "start": 51,
    "text": "single quoted",
    "token": "string",
  },
  {
    "end": 65,
    "start": 64,
    "text": "'",
    "token": "string",
  },
  {
    "end": 67,
    "start": 66,
    "text": """,
    "token": "string",
  },
  {
    "end": 75,
    "start": 67,
    "text": "escape: ",
    "token": "string",
  },
  {
    "end": 77,
    "start": 75,
    "text": "\\n",
    "token": "string.escape",
  },
  {
    "end": 80,
    "start": 78,
    "text": "\\t",
    "token": "string.escape",
  },
  {
    "end": 83,
    "start": 81,
    "text": "\\\\",
    "token": "string.escape",
  },
  {
    "end": 90,
    "start": 84,
    "text": "\\u0041",
    "token": "string.escape",
  },
  {
    "end": 100,
    "start": 91,
    "text": "\\u{1F600}",
    "token": "string.escape",
  },
  {
    "end": 101,
    "start": 100,
    "text": """,
    "token": "string",
  },
  {
    "end": 122,
    "start": 102,
    "text": "// this is a comment",
    "token": "comment",
  },
]
`;

exports[`TextMate tokenizer > basics > tokenizes all basics fixtures > basics/projection.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 12,
    "start": 11,
    "text": """,
    "token": "string",
  },
  {
    "end": 16,
    "start": 12,
    "text": "post",
    "token": "string",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 24,
    "start": 19,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 25,
    "start": 24,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 30,
    "start": 26,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 31,
    "start": 30,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 33,
    "start": 32,
    "text": """,
    "token": "string",
  },
  {
    "end": 39,
    "start": 33,
    "text": "author",
    "token": "string",
  },
  {
    "end": 40,
    "start": 39,
    "text": """,
    "token": "string",
  },
  {
    "end": 41,
    "start": 40,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 48,
    "start": 42,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 50,
    "start": 48,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 54,
    "start": 50,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 55,
    "start": 54,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > basics > tokenizes all basics fixtures > basics/slice.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 12,
    "start": 11,
    "text": """,
    "token": "string",
  },
  {
    "end": 16,
    "start": 12,
    "text": "post",
    "token": "string",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "0",
    "token": "number",
  },
  {
    "end": 23,
    "start": 20,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 25,
    "start": 23,
    "text": "10",
    "token": "number",
  },
  {
    "end": 26,
    "start": 25,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/nested-brackets.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 12,
    "start": 11,
    "text": """,
    "token": "string",
  },
  {
    "end": 16,
    "start": 12,
    "text": "post",
    "token": "string",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 20,
    "start": 18,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 31,
    "start": 21,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 32,
    "start": 31,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 34,
    "start": 33,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 42,
    "start": 40,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 44,
    "start": 43,
    "text": """,
    "token": "string",
  },
  {
    "end": 50,
    "start": 44,
    "text": "author",
    "token": "string",
  },
  {
    "end": 51,
    "start": 50,
    "text": """,
    "token": "string",
  },
  {
    "end": 52,
    "start": 51,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 53,
    "start": 52,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 56,
    "start": 53,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 57,
    "start": 56,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 57,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 60,
    "start": 59,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 61,
    "start": 60,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 66,
    "start": 61,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 69,
    "start": 67,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 71,
    "start": 70,
    "text": """,
    "token": "string",
  },
  {
    "end": 79,
    "start": 71,
    "text": "category",
    "token": "string",
  },
  {
    "end": 80,
    "start": 79,
    "text": """,
    "token": "string",
  },
  {
    "end": 81,
    "start": 80,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 82,
    "start": 81,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 86,
    "start": 82,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 87,
    "start": 86,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 89,
    "start": 88,
    "text": """,
    "token": "string",
  },
  {
    "end": 97,
    "start": 89,
    "text": "products",
    "token": "string",
  },
  {
    "end": 98,
    "start": 97,
    "text": """,
    "token": "string",
  },
  {
    "end": 99,
    "start": 98,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 101,
    "start": 100,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 102,
    "start": 101,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 107,
    "start": 102,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 110,
    "start": 108,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 112,
    "start": 111,
    "text": """,
    "token": "string",
  },
  {
    "end": 119,
    "start": 112,
    "text": "product",
    "token": "string",
  },
  {
    "end": 120,
    "start": 119,
    "text": """,
    "token": "string",
  },
  {
    "end": 123,
    "start": 121,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 134,
    "start": 124,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 135,
    "start": 134,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 136,
    "start": 135,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 137,
    "start": 136,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 140,
    "start": 137,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 141,
    "start": 140,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 142,
    "start": 141,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 143,
    "start": 142,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/variables.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "$type",
    "token": "variable",
  },
  {
    "end": 13,
    "start": 6,
    "text": "$userId",
    "token": "variable",
  },
  {
    "end": 15,
    "start": 14,
    "text": "@",
    "token": "variable.special",
  },
  {
    "end": 17,
    "start": 16,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 20,
    "start": 18,
    "text": "^^",
    "token": "variable.special",
  },
  {
    "end": 22,
    "start": 21,
    "text": "*",
    "token": "wildcard",
  },
]
`;

exports[`TextMate tokenizer > functions > tokenizes all functions fixtures > functions/global.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 6,
    "start": 5,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 6,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 8,
    "start": 7,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 8,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 16,
    "start": 14,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 18,
    "start": 17,
    "text": """,
    "token": "string",
  },
  {
    "end": 22,
    "start": 18,
    "text": "post",
    "token": "string",
  },
  {
    "end": 23,
    "start": 22,
    "text": """,
    "token": "string",
  },
  {
    "end": 24,
    "start": 23,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 25,
    "start": 24,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 26,
    "text": "defined",
    "token": "identifier.function",
  },
  {
    "end": 34,
    "start": 33,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 40,
    "start": 39,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 41,
    "text": "coalesce",
    "token": "identifier.function",
  },
  {
    "end": 50,
    "start": 49,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 50,
    "text": "subtitle",
    "token": "identifier",
  },
  {
    "end": 59,
    "start": 58,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 61,
    "start": 60,
    "text": """,
    "token": "string",
  },
  {
    "end": 69,
    "start": 61,
    "text": "Untitled",
    "token": "string",
  },
  {
    "end": 70,
    "start": 69,
    "text": """,
    "token": "string",
  },
  {
    "end": 71,
    "start": 70,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 78,
    "start": 72,
    "text": "select",
    "token": "identifier.function",
  },
  {
    "end": 79,
    "start": 78,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 84,
    "start": 79,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 87,
    "start": 85,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 89,
    "start": 88,
    "text": """,
    "token": "string",
  },
  {
    "end": 93,
    "start": 89,
    "text": "post",
    "token": "string",
  },
  {
    "end": 94,
    "start": 93,
    "text": """,
    "token": "string",
  },
  {
    "end": 97,
    "start": 95,
    "text": "=>",
    "token": "operator.arrow",
  },
  {
    "end": 103,
    "start": 98,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 104,
    "start": 103,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 109,
    "start": 105,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 110,
    "start": 109,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 116,
    "start": 111,
    "text": "round",
    "token": "identifier.function",
  },
  {
    "end": 117,
    "start": 116,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 122,
    "start": 117,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 123,
    "start": 122,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 125,
    "start": 124,
    "text": "2",
    "token": "number",
  },
  {
    "end": 126,
    "start": 125,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 133,
    "start": 127,
    "text": "length",
    "token": "identifier.function",
  },
  {
    "end": 134,
    "start": 133,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 139,
    "start": 134,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 140,
    "start": 139,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 146,
    "start": 141,
    "text": "lower",
    "token": "identifier.function",
  },
  {
    "end": 147,
    "start": 146,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 152,
    "start": 147,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 153,
    "start": 152,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 159,
    "start": 154,
    "text": "upper",
    "token": "identifier.function",
  },
  {
    "end": 160,
    "start": 159,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 164,
    "start": 160,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 165,
    "start": 164,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 169,
    "start": 166,
    "text": "now",
    "token": "identifier.function",
  },
  {
    "end": 170,
    "start": 169,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 171,
    "start": 170,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 182,
    "start": 172,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 183,
    "start": 182,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 184,
    "start": 183,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 185,
    "start": 184,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 188,
    "start": 185,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 189,
    "start": 188,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 195,
    "start": 190,
    "text": "boost",
    "token": "identifier.function",
  },
  {
    "end": 196,
    "start": 195,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 201,
    "start": 196,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 207,
    "start": 202,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 210,
    "start": 208,
    "text": "$q",
    "token": "variable",
  },
  {
    "end": 211,
    "start": 210,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 213,
    "start": 212,
    "text": "3",
    "token": "number",
  },
  {
    "end": 214,
    "start": 213,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > functions > tokenizes all functions fixtures > functions/namespaced.groq 1`] = `
[
  {
    "end": 4,
    "start": 0,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 6,
    "start": 4,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 9,
    "start": 6,
    "text": "sum",
    "token": "identifier.function",
  },
  {
    "end": 10,
    "start": 9,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 16,
    "start": 10,
    "text": "prices",
    "token": "identifier",
  },
  {
    "end": 17,
    "start": 16,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 22,
    "start": 18,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 24,
    "start": 22,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 27,
    "start": 24,
    "text": "avg",
    "token": "identifier.function",
  },
  {
    "end": 28,
    "start": 27,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 34,
    "start": 28,
    "text": "scores",
    "token": "identifier",
  },
  {
    "end": 35,
    "start": 34,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 40,
    "start": 36,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 42,
    "start": 40,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 45,
    "start": 42,
    "text": "min",
    "token": "identifier.function",
  },
  {
    "end": 46,
    "start": 45,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 52,
    "start": 46,
    "text": "values",
    "token": "identifier",
  },
  {
    "end": 53,
    "start": 52,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 54,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 60,
    "start": 58,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 63,
    "start": 60,
    "text": "max",
    "token": "identifier.function",
  },
  {
    "end": 64,
    "start": 63,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 70,
    "start": 64,
    "text": "values",
    "token": "identifier",
  },
  {
    "end": 71,
    "start": 70,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 78,
    "start": 72,
    "text": "string",
    "token": "identifier.namespace",
  },
  {
    "end": 80,
    "start": 78,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 85,
    "start": 80,
    "text": "split",
    "token": "identifier.function",
  },
  {
    "end": 86,
    "start": 85,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 90,
    "start": 86,
    "text": "tags",
    "token": "identifier",
  },
  {
    "end": 91,
    "start": 90,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 93,
    "start": 92,
    "text": """,
    "token": "string",
  },
  {
    "end": 94,
    "start": 93,
    "text": ",",
    "token": "string",
  },
  {
    "end": 95,
    "start": 94,
    "text": """,
    "token": "string",
  },
  {
    "end": 96,
    "start": 95,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 103,
    "start": 97,
    "text": "string",
    "token": "identifier.namespace",
  },
  {
    "end": 105,
    "start": 103,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 115,
    "start": 105,
    "text": "startsWith",
    "token": "identifier.function",
  },
  {
    "end": 116,
    "start": 115,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 121,
    "start": 116,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 122,
    "start": 121,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 124,
    "start": 123,
    "text": """,
    "token": "string",
  },
  {
    "end": 129,
    "start": 124,
    "text": "Draft",
    "token": "string",
  },
  {
    "end": 130,
    "start": 129,
    "text": """,
    "token": "string",
  },
  {
    "end": 131,
    "start": 130,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 137,
    "start": 132,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 139,
    "start": 137,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 143,
    "start": 139,
    "text": "join",
    "token": "identifier.function",
  },
  {
    "end": 144,
    "start": 143,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 149,
    "start": 144,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 150,
    "start": 149,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 152,
    "start": 151,
    "text": """,
    "token": "string",
  },
  {
    "end": 154,
    "start": 152,
    "text": ", ",
    "token": "string",
  },
  {
    "end": 155,
    "start": 154,
    "text": """,
    "token": "string",
  },
  {
    "end": 156,
    "start": 155,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 162,
    "start": 157,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 164,
    "start": 162,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 171,
    "start": 164,
    "text": "compact",
    "token": "identifier.function",
  },
  {
    "end": 172,
    "start": 171,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 176,
    "start": 172,
    "text": "list",
    "token": "identifier",
  },
  {
    "end": 177,
    "start": 176,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 183,
    "start": 178,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 185,
    "start": 183,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 191,
    "start": 185,
    "text": "unique",
    "token": "identifier.function",
  },
  {
    "end": 192,
    "start": 191,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 195,
    "start": 192,
    "text": "ids",
    "token": "identifier",
  },
  {
    "end": 196,
    "start": 195,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 199,
    "start": 197,
    "text": "pt",
    "token": "identifier.namespace",
  },
  {
    "end": 201,
    "start": 199,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 205,
    "start": 201,
    "text": "text",
    "token": "identifier.function",
  },
  {
    "end": 206,
    "start": 205,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 210,
    "start": 206,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 211,
    "start": 210,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 215,
    "start": 212,
    "text": "geo",
    "token": "identifier.namespace",
  },
  {
    "end": 217,
    "start": 215,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 225,
    "start": 217,
    "text": "distance",
    "token": "identifier.function",
  },
  {
    "end": 226,
    "start": 225,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 234,
    "start": 226,
    "text": "location",
    "token": "identifier",
  },
  {
    "end": 235,
    "start": 234,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 242,
    "start": 236,
    "text": "$point",
    "token": "variable",
  },
  {
    "end": 243,
    "start": 242,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 252,
    "start": 244,
    "text": "dateTime",
    "token": "identifier.namespace",
  },
  {
    "end": 254,
    "start": 252,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 257,
    "start": 254,
    "text": "now",
    "token": "identifier.function",
  },
  {
    "end": 258,
    "start": 257,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 259,
    "start": 258,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 265,
    "start": 260,
    "text": "delta",
    "token": "identifier.namespace",
  },
  {
    "end": 267,
    "start": 265,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 276,
    "start": 267,
    "text": "operation",
    "token": "identifier.function",
  },
  {
    "end": 277,
    "start": 276,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 278,
    "start": 277,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 285,
    "start": 279,
    "text": "sanity",
    "token": "identifier.namespace",
  },
  {
    "end": 287,
    "start": 285,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 296,
    "start": 287,
    "text": "projectId",
    "token": "identifier.function",
  },
  {
    "end": 297,
    "start": 296,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 298,
    "start": 297,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > functions > tokenizes all functions fixtures > functions/unknown-namespace.groq 1`] = `
[
  {
    "end": 6,
    "start": 0,
    "text": "custom",
    "token": "identifier.namespace",
  },
  {
    "end": 8,
    "start": 6,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 19,
    "start": 8,
    "text": "doSomething",
    "token": "identifier.function",
  },
  {
    "end": 20,
    "start": 19,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 20,
    "text": "arg",
    "token": "identifier",
  },
  {
    "end": 24,
    "start": 23,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 25,
    "text": "myPlugin",
    "token": "identifier.namespace",
  },
  {
    "end": 35,
    "start": 33,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 44,
    "start": 35,
    "text": "transform",
    "token": "identifier.function",
  },
  {
    "end": 45,
    "start": 44,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 45,
    "text": "data",
    "token": "identifier",
  },
  {
    "end": 50,
    "start": 49,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/arithmetic.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 7,
    "start": 6,
    "text": "+",
    "token": "operator",
  },
  {
    "end": 11,
    "start": 8,
    "text": "tax",
    "token": "identifier",
  },
  {
    "end": 17,
    "start": 12,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 19,
    "start": 18,
    "text": "-",
    "token": "operator",
  },
  {
    "end": 28,
    "start": 20,
    "text": "discount",
    "token": "identifier",
  },
  {
    "end": 34,
    "start": 29,
    "text": "count",
    "token": "identifier",
  },
  {
    "end": 36,
    "start": 35,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 38,
    "start": 37,
    "text": "2",
    "token": "number",
  },
  {
    "end": 44,
    "start": 39,
    "text": "total",
    "token": "identifier",
  },
  {
    "end": 46,
    "start": 45,
    "text": "/",
    "token": "operator",
  },
  {
    "end": 52,
    "start": 47,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 58,
    "start": 53,
    "text": "index",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 59,
    "text": "%",
    "token": "operator",
  },
  {
    "end": 62,
    "start": 61,
    "text": "2",
    "token": "number",
  },
  {
    "end": 67,
    "start": 63,
    "text": "base",
    "token": "identifier",
  },
  {
    "end": 70,
    "start": 68,
    "text": "**",
    "token": "operator",
  },
  {
    "end": 79,
    "start": 71,
    "text": "exponent",
    "token": "identifier",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/comparison.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "score",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 14,
    "start": 11,
    "text": "100",
    "token": "number",
  },
  {
    "end": 15,
    "start": 14,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 17,
    "start": 16,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 18,
    "start": 17,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 18,
    "text": "score",
    "token": "identifier",
  },
  {
    "end": 26,
    "start": 24,
    "text": "!=",
    "token": "operator",
  },
  {
    "end": 28,
    "start": 27,
    "text": "0",
    "token": "number",
  },
  {
    "end": 29,
    "start": 28,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 31,
    "start": 30,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 32,
    "start": 31,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 35,
    "start": 32,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 37,
    "start": 36,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 40,
    "start": 38,
    "text": "18",
    "token": "number",
  },
  {
    "end": 41,
    "start": 40,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 43,
    "start": 42,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 44,
    "start": 43,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 47,
    "start": 44,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 49,
    "start": 48,
    "text": "<",
    "token": "operator",
  },
  {
    "end": 52,
    "start": 50,
    "text": "65",
    "token": "number",
  },
  {
    "end": 53,
    "start": 52,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 55,
    "start": 54,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 56,
    "start": 55,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 59,
    "start": 56,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 62,
    "start": 60,
    "text": ">=",
    "token": "operator",
  },
  {
    "end": 65,
    "start": 63,
    "text": "21",
    "token": "number",
  },
  {
    "end": 66,
    "start": 65,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 68,
    "start": 67,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 69,
    "start": 68,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 72,
    "start": 69,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 75,
    "start": 73,
    "text": "<=",
    "token": "operator",
  },
  {
    "end": 78,
    "start": 76,
    "text": "99",
    "token": "number",
  },
  {
    "end": 79,
    "start": 78,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/keyword-ops.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 12,
    "start": 11,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 12,
    "text": """,
    "token": "string",
  },
  {
    "end": 17,
    "start": 13,
    "text": "post",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": """,
    "token": "string",
  },
  {
    "end": 19,
    "start": 18,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 21,
    "start": 20,
    "text": """,
    "token": "string",
  },
  {
    "end": 28,
    "start": 21,
    "text": "article",
    "token": "string",
  },
  {
    "end": 29,
    "start": 28,
    "text": """,
    "token": "string",
  },
  {
    "end": 30,
    "start": 29,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 31,
    "start": 30,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 34,
    "start": 33,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 45,
    "start": 40,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 47,
    "start": 46,
    "text": """,
    "token": "string",
  },
  {
    "end": 53,
    "start": 47,
    "text": "hello*",
    "token": "string",
  },
  {
    "end": 54,
    "start": 53,
    "text": """,
    "token": "string",
  },
  {
    "end": 55,
    "start": 54,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/logical.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 3,
    "start": 2,
    "text": "a",
    "token": "identifier",
  },
  {
    "end": 6,
    "start": 4,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 8,
    "start": 7,
    "text": "b",
    "token": "identifier",
  },
  {
    "end": 9,
    "start": 8,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 11,
    "start": 10,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 12,
    "start": 11,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 12,
    "text": "a",
    "token": "identifier",
  },
  {
    "end": 16,
    "start": 14,
    "text": "||",
    "token": "operator",
  },
  {
    "end": 18,
    "start": 17,
    "text": "b",
    "token": "identifier",
  },
  {
    "end": 19,
    "start": 18,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 21,
    "start": 20,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 22,
    "start": 21,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 22,
    "text": "!",
    "token": "operator",
  },
  {
    "end": 32,
    "start": 23,
    "text": "published",
    "token": "identifier",
  },
  {
    "end": 33,
    "start": 32,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/pair.groq 1`] = `
[
  {
    "end": 6,
    "start": 0,
    "text": "select",
    "token": "identifier.function",
  },
  {
    "end": 7,
    "start": 6,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 12,
    "start": 7,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 15,
    "start": 13,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 21,
    "start": 17,
    "text": "post",
    "token": "string",
  },
  {
    "end": 22,
    "start": 21,
    "text": """,
    "token": "string",
  },
  {
    "end": 25,
    "start": 23,
    "text": "=>",
    "token": "operator.arrow",
  },
  {
    "end": 27,
    "start": 26,
    "text": """,
    "token": "string",
  },
  {
    "end": 31,
    "start": 27,
    "text": "blog",
    "token": "string",
  },
  {
    "end": 32,
    "start": 31,
    "text": """,
    "token": "string",
  },
  {
    "end": 33,
    "start": 32,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 35,
    "start": 34,
    "text": """,
    "token": "string",
  },
  {
    "end": 40,
    "start": 35,
    "text": "other",
    "token": "string",
  },
  {
    "end": 41,
    "start": 40,
    "text": """,
    "token": "string",
  },
  {
    "end": 42,
    "start": 41,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/range.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 12,
    "start": 11,
    "text": """,
    "token": "string",
  },
  {
    "end": 16,
    "start": 12,
    "text": "post",
    "token": "string",
  },
  {
    "end": 17,
    "start": 16,
    "text": """,
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "0",
    "token": "number",
  },
  {
    "end": 22,
    "start": 20,
    "text": "..",
    "token": "operator.range",
  },
  {
    "end": 23,
    "start": 22,
    "text": "5",
    "token": "number",
  },
  {
    "end": 24,
    "start": 23,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 26,
    "start": 25,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 27,
    "start": 26,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 32,
    "start": 27,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 35,
    "start": 33,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 37,
    "start": 36,
    "text": """,
    "token": "string",
  },
  {
    "end": 41,
    "start": 37,
    "text": "post",
    "token": "string",
  },
  {
    "end": 42,
    "start": 41,
    "text": """,
    "token": "string",
  },
  {
    "end": 43,
    "start": 42,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 44,
    "start": 43,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 45,
    "start": 44,
    "text": "0",
    "token": "number",
  },
  {
    "end": 48,
    "start": 45,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 50,
    "start": 48,
    "text": "10",
    "token": "number",
  },
  {
    "end": 51,
    "start": 50,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 53,
    "start": 52,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 54,
    "start": 53,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 57,
    "start": 54,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 58,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 63,
    "start": 61,
    "text": "18",
    "token": "number",
  },
  {
    "end": 65,
    "start": 63,
    "text": "..",
    "token": "operator.range",
  },
  {
    "end": 67,
    "start": 65,
    "text": "65",
    "token": "number",
  },
  {
    "end": 68,
    "start": 67,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`TextMate tokenizer > operators > tokenizes all operators fixtures > operators/spread.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 4,
    "start": 1,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 5,
    "start": 4,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 7,
    "start": 6,
    "text": """,
    "token": "string",
  },
  {
    "end": 12,
    "start": 7,
    "text": "extra",
    "token": "string",
  },
  {
    "end": 13,
    "start": 12,
    "text": """,
    "token": "string",
  },
  {
    "end": 14,
    "start": 13,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 19,
    "start": 15,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 20,
    "start": 19,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;
